# bunny-xblock

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: release.yml
bunny_xblock/: __init__.py  admin.py  apps.py  bunny_api.py  crypto.py  models.py  permissions.py  urls.py  views.py  webhooks.py  xblock.py
bunny_xblock/migrations/: 0001_initial.py
bunny_xblock/settings/: common.py
bunny_xblock/static/css/: author_view.css  student_view.css
bunny_xblock/static/js/: author_view.js  student_view.js
bunny_xblock/templates/bunny_xblock/: author_view.html  student_view.html
scripts/: vendor.sh
